<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/buttonContactProviderQuery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="32dp"
        android:text="@string/buttonContactProviderQueryText" />

    <Button
        android:id="@+id/buttonForListOfProviders"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:text="@string/buttonForListOfProvidersText" />

    <Button
        android:id="@+id/buttonContactProviderLoader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/buttonContactProviderQuery"
        android:text="@string/buttonContactProviderLoaderText" />

    <Button
        android:id="@+id/buttonMediaProvider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/buttonContactProviderLoader"
        android:text="@string/buttonMediaProviderText" />

    <Button
        android:id="@+id/buttonVideoProvider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/buttonMediaProvider"
        android:text="@string/buttonVideoProviderText" />

    <Button
        android:id="@+id/buttonAudioProvider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/buttonVideoProvider"
        android:text="@string/buttonAudioProviderText" />

    <Button
        android:id="@+id/buttonImageProvider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/buttonAudioProvider"
        android:text="@string/buttonImageProviderText" />

    <ToggleButton
        android:id="@+id/toggleButtonImageAccess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/buttonImageProvider"
        android:layout_alignBottom="@+id/buttonImageProvider"
        android:layout_alignParentRight="true"
        android:text="@string/toggleButtonImageAccessText"
        android:textOff="Image Access Allowed"
        android:textOn="Image Access Prohibited" 
        android:checked="false" />
    <ToggleButton
        android:id="@+id/toggleButtonVideoAccess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/buttonVideoProvider"
        android:layout_alignBottom="@+id/buttonVideoProvider"
        android:layout_alignParentRight="true"
        android:text="@string/toggleButtonVideoAccessText"
        android:textOff="Video Access Allowed"
        android:textOn="Video Access Prohibited" 
        android:checked="false" />

    <ToggleButton
        android:id="@+id/toggleButtonAudioAccess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/buttonAudioProvider"
        android:layout_alignBottom="@+id/buttonAudioProvider"
        android:layout_alignParentRight="true"
        android:text="@string/toggleButtonAudioAccessText"
        android:textOff="Audio Access Allowed"
        android:textOn="Audio Access Prohibited" 
        android:checked="false" />

    <ToggleButton
        android:id="@+id/toggleButtonMediaAccess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/buttonMediaProvider"
        android:checked="false"
        android:text="@string/toggleButtonMediaAccessText"
        android:textOff="Media Access Allowed"
        android:textOn="Media Access Prohibited" />

    <ToggleButton
        android:id="@+id/toggleButtonContactsAccess"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonMediaProvider"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/buttonContactProviderQuery"
        android:text="@string/toggleButtonContactAccessText"
        android:textOff="Contact Access Allowed"
        android:textOn="Contact Access Prohibited" 
        android:checked="false" />

</RelativeLayout>